<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/page_common">
  
  <include
        android:id="@+id/baseHeader"
        layout="@layout/base_header" /> 
	<!-- User Information End! -->

<!-- 	<TextView android:id="@+id/examDesc"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:textSize="18sp"
		android:textColor="#000000"
		android:background="@drawable/common_tv_value"
		android:visibility="invisible">
	</TextView> -->

	<TableLayout
	     android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_marginLeft="10dp"
		 android:layout_marginRight="10dp"
		 android:layout_marginTop="10dp"
		 android:background="@drawable/table_about_exam">
		<TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:gravity="center_horizontal"
  			 android:layout_gravity="center_horizontal"
			 android:background="@drawable/tr_exam_title">
			 <TextView 
	  			 android:layout_width="fill_parent" 
	  			 android:layout_height="fill_parent"
	  			 android:textSize="18sp"
	  			 android:textColor="#000000"
	  			 android:text="@string/label_tv_choose_exam">
 		 	</TextView>
		 </TableRow>
		 <TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content">
			 <Spinner android:id="@+id/Spinner01" 
			     android:layout_width="fill_parent"
			     android:layout_height="wrap_content"
			     android:layout_marginTop="5dp"
			     android:layout_marginLeft="20dp"
				 android:layout_marginRight="20dp">
		  	 </Spinner>
		 </TableRow>
	</TableLayout>
	
	<!-- Exam Description -->
	<TableLayout
	     android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_marginLeft="10dp"
		 android:layout_marginRight="10dp"
		 android:layout_marginTop="10dp"
		 android:background="@drawable/table_about_exam">
	    <TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:background="@drawable/tr_exam_title">
	 		<TextView
	 		    style="@style/textview_label_style"
	 		    android:gravity="center_horizontal"
	 		    android:text="@string/label_about_exam"
	 		    android:textColor="#000000" >
			</TextView>       
   		</TableRow>
		<TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:layout_marginLeft="20dp"
			 android:layout_marginRight="20dp">
	 		<TextView 
				android:text="@string/label_exam_que_num"
				style="@style/textview_label_style">
			</TextView>
			<TextView android:id="@+id/examQueNum"
			    style="@style/textview_value_style"
			    android:text="100">
			</TextView>          
	   	</TableRow>
		<TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:layout_marginLeft="20dp"
			 android:layout_marginRight="20dp">
	 		<TextView 
				android:text="@string/label_exam_time"
				style="@style/textview_label_style">
			</TextView>
			<TextView android:id="@+id/examTime"
			    style="@style/textview_value_style"
			    android:text="60">
			</TextView>          
	   	</TableRow>
	   <TableRow
	         android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:layout_marginLeft="20dp"
			 android:layout_marginRight="20dp">
	 		<TextView 
				android:text="@string/label_exam_score"
				style="@style/textview_label_style">
			</TextView>
			<TextView android:id="@+id/examScore"
			    style="@style/textview_value_style"
			    android:text="100">
			</TextView>          
	   	</TableRow>
    </TableLayout>
   	<!-- Exam Description End!-->
   	
   	
    <TableRow
         android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_marginTop="50dp"
		 android:layout_gravity="center_horizontal"
		 android:gravity="center_horizontal">
 		<Button
 		    android:id="@+id/startBtn"
 		    style="@style/button_style"
 		    android:paddingLeft="100dp"
 		    android:paddingRight="100dp"
 		    android:text="@string/label_btn_start" >
		</Button>
   	</TableRow>
   	
</LinearLayout>